скруглено фото, расширен padding кнопок, изменено расстояние sub_menu

--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
             <a class="sub_menu_item" href="#">
                 Специальные цены
             </a>
+            <div class="sub_menu_button">
             <a class="sub_menu_item" href="#">
                 Отзывы
             </a>
+            </div>
         </nav>
     </div>
     <div class="article">
