Добавлен бургер, рефакторинг

--- a/index.html
+++ b/index.html
@@ -2,134 +2,123 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>burger</title>
-    <link rel="stylesheet" href="style.css">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <title>CPS - сервисный центр по ремонту</title>
+    <link href="style.css" rel="stylesheet">
+    <title>Title</title>
 </head>
 <body>
-<div class="body_container">
-    <header class="header">
-        <div class="container_header_menu">
-            <ul class="header_menu_left">
-                <li class="header_menu_item">
-                    <a href="#">
-                        <img src="./assets/burger.svg" alt="">
-                    </a>
+<header class="header">
+    <div class="container-header">
+        <div class="header-left">
+            <ul class="header-left_first-section">
+                <li>
+                    <button class="burger">
+                        <img alt="burger" src="./assets/burger.svg">
+                    </button>
                 </li>
-                <li class="header_menu_item">
-                    <a href="#">
-                        <img src="./assets/Group.svg" alt="">
-                    </a>
-                </li>
-            </ul>
-            <ul class="header_menu_right">
-                <li class="header_menu_item">
-                    <a href="#">
-                        <img src="./assets/search.svg" alt="">
+                <li>
+                    <a class="logo" href="#">
+                        <img alt="logo" src="./assets/Group.svg">
                     </a>
                 </li>
             </ul>
         </div>
-    </header>
-    <div class="container">
-        <main>
-            <ul class="main_menu">
-                <li class="main_menu_item">
-                    <a class="item" href="#">
-                        <img src="./assets/highlight.svg" alt="">
-                        Ремонт техники
+        <div class="header-right">
+            <ul class="header-right_second-section">
+                <li>
+                    <a href="#">
+                        <img alt="call" src="./assets/call.svg">
                     </a>
                 </li>
-                <li class="main_menu_item">
-                    <a class="item" href="#">
-                        <img src="./assets/highlight.svg" alt="">
-                        Услуги и сервисы
+                <li>
+                    <a href="#">
+                        <img alt="clock" src="./assets/chat.svg">
                     </a>
                 </li>
-                <li class="main_menu_item">
-                    <a class="item" href="#">
-                        <img src="./assets/highlight.svg" alt="">
-                        Корпоративным клиентам
-                    </a>
-                </li>
-                <li class="main_menu_item">
-                    <a class="item" href="#">
-                        <img src="./assets/highlight.svg" alt="">
-                        Продавцам техники
-                    </a>
-                </li>
-                <li class="main_menu_item">
-                    <a class="item" href="#">
-                        <img src="./assets/highlight.svg" alt="">
-                        Партнерам
-                    </a>
-                </li>
-                <li class="main_menu_item">
-                    <a class="item" href="#">
-                        <img src="./assets/highlight.svg" alt="">
-                        Производителям
-                    </a>
-                </li>
-                <li class="main_menu_item">
-                    <a class="item" href="#">
-                        <img src="./assets/highlight.svg" alt="">
-                        Наши сервисные сервисы
-                    </a>
-                </li>
-                <li class="main_menu_item">
-                    <a  class="item" href="#">
-                        <img src="./assets/highlight.svg" alt="">
-                        Контакты
+                <li class="profile">
+                    <a href="#">
+                        <img alt="clock" src="./assets/profile.svg">
                     </a>
                 </li>
             </ul>
-        </main>
-        <footer class="footer">
-            <div class="container_footer">
-                <ul class="footer_menu">
-                    <li class="footer_menu_item">
-                        <a href="#">
-                            <img src="./assets/call.svg" alt="">
-                        </a>
-                    </li>
-                    <li class="footer_menu_item">
-                        <a href="#">
-                            <img src="./assets/chat.svg" alt="">
-                        </a>
-                    </li>
-                    <li class="footer_menu_item">
-                        <a href="#">
-                            <img src="./assets/profile.svg" alt="">
-                        </a>
-                    </li>
-                </ul>
-                <ul class="footer_info">
-                    <li class="footer_info_item">
-                        mail@cps.com
-                    </li>
-                    <li class="footer_info_item">
-                        <span class="telephone">8 800 890 8900</span>
-                    </li>
-                </ul>
-            </div>
-            <ul class="language">
-                <li class="language_item">
-                    <a class="select" href="">
-                        RU
+            <ul class="header-right_third-section">
+                <li>
+                    <a class="repair" href="#">
+                        <img alt="clock" src="./assets/repair.svg">
                     </a>
                 </li>
-                <li class="language_item">
-                    <a class="select" href="">
-                        EN
-                    </a>
-                </li>
-                <li class="language_item">
-                    <a class="select" href="">
-                        CH
+                <li>
+                    <a class="status" href="#">
+                        <img alt="clock" src="./assets/checkstatus.svg">
                     </a>
                 </li>
             </ul>
-        </footer>
+        </div>
     </div>
-</div>
+
+</header>
+<main>
+    <section class="services">
+        <div class="title">
+            <img alt="" src="./assets/highlight.svg">
+            <h1>
+                Услуги и сервисы
+            </h1>
+        </div>
+        <ul class="services_list">
+            <li class="services_item">
+                <a href="#">
+                    Ремонтируемые бренды
+                </a>
+            </li>
+            <li class="services_item">
+                <a href="#">
+                    Ремонтируемые устройства
+                </a>
+            </li>
+            <li class="services_item">
+                <a href="#">
+                    Цены на услуги
+                </a>
+            </li>
+            <li class="services_item">
+                <a href="#">
+                    Адреса сервисных центров
+                </a>
+            </li>
+            <li class="services_item">
+                <a href="#">
+                    Специальные цены
+                </a>
+            </li>
+            <li class="services_item">
+                <a href="#">
+                    Отзывы
+                </a>
+            </li>
+        </ul>
+        <article class="about">
+            <div class="text">
+                <p class="about_text first">
+                    Мы являемся авторизованным сервисным центром по ремонту техники Dell.
+                    Только у нас вы можете отремонтировать свой ноутбук Dell с официальной гарантией производителя.
+                </p>
+                <p class="about_text second">
+                    Мы успешно работаем с 1992 года и заслужили репутацию надежного партнера, что подтверждает большое
+                    количество постоянных
+                    клиентов. Мы гордимся тем, что к нам обращаются по рекомендациям и, в свою очередь, советуют нас
+                    родным и близким.
+                </p>
+            </div>
+            <button class="about_readmore">
+                <img alt="read more" src="./assets/expand.svg">
+                Читать далее
+            </button>
+            <img alt="about" class="about_img" src="./assets/Picture%20Copy.jpg">
+        </article>
+    </section>
+</main>
+
 </body>
 </html>
