Подсвечивание выбранного языка

--- a/burger/index.html
+++ b/burger/index.html
@@ -113,7 +113,7 @@
             </div>
             <ul class="language">
                 <li class="language_item">
-                    <a class="select" href="">
+                    <a class="select ru" href="">
                         RU
                     </a>
                 </li>
